force-app/main/default/objects/Machine_Asset__c/Machine_Asset__c.object-meta.xml
<CustomObject>
    <description>Represents installed machine.</description>
    <label>Machine Asset</label>
    <nameField>
        <label>Machine Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Machine Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>