force-app/main/default/objects/Machine_Asset__c/fields/Asset_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Code__c</fullName>
    <displayFormat>AC-{0000}</displayFormat>
    <label>Asset Code</label>
    <type>AutoNumber</type>
</CustomField>