force-app/main/default/objects/Machine_Asset__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <label>Asset Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>