force-app/main/default/objects/Machine_Asset__c/fields/Customer_Site__c.field-meta.xml
<CustomField>
    <fullName>Customer_Site__c</fullName>
    <label>Customer Site</label>
    <referenceTo>Customer_Site__c</referenceTo>
    <relationshipLabel>Machine Assets</relationshipLabel>
    <relationshipName>Machine_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>