force-app/main/default/objects/Machine_Asset__c/fields/Installation_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Installation_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Machine_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>