force-app/main/default/objects/Machine_Asset__c/fields/Next_Maintenance_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Maintenance_Due__c</fullName>
    <formula>Last_Maintenance_Date__c + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Maintenance Due</label>
    <type>Date</type>
</CustomField>