force-app/main/default/objects/Machine_Asset__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Battery System</fullName>
            </value>
            <value>
                <fullName>Boiler</fullName>
            </value>
            <value>
                <fullName>CNC Machine</fullName>
            </value>
            <value>
                <fullName>Compressor</fullName>
            </value>
            <value>
                <fullName>Control Panel</fullName>
            </value>
            <value>
                <fullName>Conveyor System</fullName>
            </value>
            <value>
                <fullName>Cooling System</fullName>
            </value>
            <value>
                <fullName>Generator</fullName>
            </value>
            <value>
                <fullName>HVAC Unit</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Packaging Machine</fullName>
            </value>
            <value>
                <fullName>Printing Machine</fullName>
            </value>
            <value>
                <fullName>Pump</fullName>
            </value>
            <value>
                <fullName>Solar Inverter</fullName>
            </value>
            <value>
                <fullName>Transformer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>