force-app/main/default/objects/Machine_Asset__c/fields/Warranty_End__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End__c</fullName>
    <label>Warranty End</label>
    <type>Date</type>
</CustomField>