force-app/main/default/objects/Machine_Asset__c/fields/Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status__c</fullName>
    <formula>IF(
    Warranty_End__c &gt;= TODAY(),
    &quot;Active&quot;,
    &quot;Expired&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Status</label>
    <type>Text</type>
</CustomField>