force-app/main/default/objects/Machine_Asset__c/validationRules/Prevent_Future_Installation_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Future_Installation_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>Installation_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>The installation date cannot be in the future.</errorMessage>
</ValidationRule>