force-app/main/default/objects/Machine_Asset__c/validationRules/Warranty_End_Must_Be_Greater_Than_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Warranty_End_Must_Be_Greater_Than_Start</fullName>
    <active>true</active>
    <errorConditionFormula>Warranty_End__c &lt; Warranty_Start__c</errorConditionFormula>
    <errorMessage>Warranty End Date must be after Warranty Start Date.</errorMessage>
</ValidationRule>